# tui-file-explorer

./: .gitignore  .swp  Cargo.toml  README.md  theme.json
.devcontainer/: devcontainer.json
src/: app.rs  handler.rs  main.rs  theme.rs  tui.rs  ui.rs
