[package]
name = "file-explorer"
version = "0.1.0"
authors = ["Vaspera <110002885+Vazpera@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
tokio = { version = "1.39.3", features = ["full"] }
