[package]
name = "fxp"
version = "0.1.0"
authors = ["Vaspera <110002885+Vazpera@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.28.1", features = ["event-stream"] }
fs_extra = "1.3.0"
futures = "0.3.30"
ratatui = "0.28.1"
tokio = { version = "1.39.3", features = ["full"] }
